--- a/environments/py-3.10-linux-64-dev.conda.lock.yml
+++ b/environments/py-3.10-linux-64-dev.conda.lock.yml
@@ -15,7 +15,7 @@ dependencies:
   - argon2-cffi-bindings=21.2.0=py310h2372a71_4
   - arrow=1.3.0=pyhd8ed1ab_0
   - asciitree=0.3.3=py_2
-  - astroid=3.2.3=py310hff52083_0
+  - astroid=3.2.4=py310hff52083_0
   - asttokens=2.4.1=pyhd8ed1ab_0
   - async-lru=2.0.4=pyhd8ed1ab_0
   - attrs=23.2.0=pyh71513ae_0
@@ -25,8 +25,8 @@ dependencies:
   - brotli=1.1.0=hd590300_1
   - brotli-bin=1.1.0=hd590300_1
   - brotli-python=1.1.0=py310hc6cd4ac_1
-  - bzip2=1.0.8=hd590300_5
-  - c-ares=1.32.0=h4ab18f5_0
+  - bzip2=1.0.8=h4bc722e_7
+  - c-ares=1.32.3=h4bc722e_0
   - ca-certificates=2024.7.4=hbcca054_0
   - cached-property=1.5.2=hd8ed1ab_1
   - cached_property=1.5.2=pyha770c72_1
@@ -51,7 +51,7 @@ dependencies:
   - distributed=2024.6.2=pyhd8ed1ab_0
   - docutils=0.18.1=py310hff52083_1
   - entrypoints=0.4=pyhd8ed1ab_0
-  - exceptiongroup=1.2.0=pyhd8ed1ab_2
+  - exceptiongroup=1.2.2=pyhd8ed1ab_0
   - executing=2.0.1=pyhd8ed1ab_0
   - fasteners=0.17.3=pyhd8ed1ab_0
   - fonttools=4.53.1=py310h5b4e0ec_0
@@ -68,17 +68,17 @@ dependencies:
   - httpcore=1.0.5=pyhd8ed1ab_0
   - httpx=0.27.0=pyhd8ed1ab_0
   - hyperframe=6.0.1=pyhd8ed1ab_0
-  - icu=73.2=h59595ed_0
+  - icu=75.1=he02047a_0
   - idna=3.7=pyhd8ed1ab_0
   - imagesize=1.4.1=pyhd8ed1ab_0
-  - importlib-metadata=8.0.0=pyha770c72_0
-  - importlib_metadata=8.0.0=hd8ed1ab_0
+  - importlib-metadata=8.2.0=pyha770c72_0
+  - importlib_metadata=8.2.0=hd8ed1ab_0
   - importlib_resources=6.4.0=pyhd8ed1ab_0
   - iniconfig=2.0.0=pyhd8ed1ab_0
   - ipykernel=6.29.5=pyh3099207_0
   - ipython=8.26.0=pyh707e725_0
   - ipython_genutils=0.2.0=pyhd8ed1ab_1
-  - ipywidgets=7.8.2=pyhd8ed1ab_0
+  - ipywidgets=7.8.3=pyhd8ed1ab_0
   - isoduration=20.11.0=pyhd8ed1ab_0
   - isort=5.13.2=pyhd8ed1ab_0
   - jedi=0.19.1=pyhd8ed1ab_0
@@ -95,13 +95,13 @@ dependencies:
   - jupyter_client=8.6.2=pyhd8ed1ab_0
   - jupyter_core=5.7.2=py310hff52083_0
   - jupyter_events=0.10.0=pyhd8ed1ab_0
-  - jupyter_server=2.14.1=pyhd8ed1ab_1
+  - jupyter_server=2.14.2=pyhd8ed1ab_0
   - jupyter_server_terminals=0.5.3=pyhd8ed1ab_0
-  - jupyterlab=4.2.3=pyhd8ed1ab_0
+  - jupyterlab=4.2.4=pyhd8ed1ab_0
   - jupyterlab_pygments=0.3.0=pyhd8ed1ab_1
-  - jupyterlab_server=2.27.2=pyhd8ed1ab_0
-  - jupyterlab_widgets=1.1.8=pyhd8ed1ab_0
-  - jupytext=1.16.3=pyhd8ed1ab_0
+  - jupyterlab_server=2.27.3=pyhd8ed1ab_0
+  - jupyterlab_widgets=1.1.9=pyhd8ed1ab_0
+  - jupytext=1.16.4=pyh80e38bb_0
   - keyutils=1.6.1=h166bdaf_0
   - kiwisolver=1.4.5=py310hd41b1e2_1
   - krb5=1.21.3=h659f571_0
@@ -115,7 +115,7 @@ dependencies:
   - libbrotlidec=1.1.0=hd590300_1
   - libbrotlienc=1.1.0=hd590300_1
   - libcblas=3.9.0=20_linux64_mkl
-  - libcurl=8.8.0=hca28451_1
+  - libcurl=8.9.1=hdb1bdb2_0
   - libdeflate=1.20=hd590300_0
   - libdlf=0.2.0=pyhd8ed1ab_0
   - libedit=3.1.20191231=he28a2e2_2
@@ -124,7 +124,7 @@ dependencies:
   - libgcc-ng=14.1.0=h77fa898_0
   - libgfortran-ng=14.1.0=h69a702a_0
   - libgfortran5=14.1.0=hc5f4f2c_0
-  - libhwloc=2.11.0=default_h5622ce7_1000
+  - libhwloc=2.11.1=default_hecaa2ac_1000
   - libiconv=1.17=hd590300_2
   - libjpeg-turbo=3.0.0=hd590300_1
   - liblapack=3.9.0=20_linux64_mkl
@@ -140,7 +140,7 @@ dependencies:
   - libwebp-base=1.4.0=hd590300_0
   - libxcb=1.16=hd590300_0
   - libxcrypt=4.4.36=hd590300_1
-  - libxml2=2.12.7=h4c95cb1_2
+  - libxml2=2.12.7=he7c6b58_4
   - libzlib=1.3.1=h4ab18f5_1
   - linkify-it-py=2.0.3=pyhd8ed1ab_0
   - llvm-openmp=18.1.8=hf5423f3_0
@@ -170,18 +170,18 @@ dependencies:
   - numcodecs=0.12.1=py310h76e45a6_1
   - numpy=1.26.4=py310hb13e2d6_0
   - openjpeg=2.5.2=h488ebb8_0
-  - openssl=3.3.1=h4ab18f5_1
+  - openssl=3.3.1=h4bc722e_2
   - overrides=7.7.0=pyhd8ed1ab_0
   - packaging=24.1=pyhd8ed1ab_0
   - pandas=2.2.2=py310hf9f9076_1
-  - pandoc=3.2.1=ha770c72_0
+  - pandoc=3.3=ha770c72_0
   - pandocfilters=1.5.0=pyhd8ed1ab_0
   - parso=0.8.4=pyhd8ed1ab_0
   - partd=1.4.2=pyhd8ed1ab_0
   - pexpect=4.9.0=pyhd8ed1ab_0
   - pickleshare=0.7.5=py_1003
   - pillow=10.3.0=py310hebfe307_1
-  - pip=24.0=pyhd8ed1ab_0
+  - pip=24.2=pyhd8ed1ab_0
   - pkgutil-resolve-name=1.3.10=pyhd8ed1ab_1
   - platformdirs=4.2.2=pyhd8ed1ab_0
   - pluggy=1.5.0=pyhd8ed1ab_0
@@ -190,7 +190,7 @@ dependencies:
   - psutil=6.0.0=py310hc51659f_0
   - pthread-stubs=0.4=h36c2ea0_1001
   - ptyprocess=0.7.0=pyhd3deb0d_0
-  - pure_eval=0.2.2=pyhd8ed1ab_0
+  - pure_eval=0.2.3=pyhd8ed1ab_0
   - pybtex=0.24.0=pyhd8ed1ab_2
   - pybtex-docutils=1.0.3=py310hff52083_1
   - pycparser=2.22=pyhd8ed1ab_0
@@ -199,12 +199,12 @@ dependencies:
   - pydata-sphinx-theme=0.15.4=pyhd8ed1ab_0
   - pydiso=0.0.5=py310h4fb8009_1
   - pygments=2.18.0=pyhd8ed1ab_0
-  - pylint=3.2.5=pyhd8ed1ab_0
+  - pylint=3.2.6=pyhd8ed1ab_0
   - pymatsolver=0.2.0=ha770c72_3
   - pymatsolver-base=0.2.0=pyh44b312d_3
   - pyparsing=3.1.2=pyhd8ed1ab_0
   - pysocks=1.7.1=pyha2e5f31_6
-  - pytest=8.2.2=pyhd8ed1ab_0
+  - pytest=8.3.2=pyhd8ed1ab_0
   - pytest-cov=5.0.0=pyhd8ed1ab_0
   - python=3.10.14=hd12c33a_0_cpython
   - python-dateutil=2.9.0=pyhd8ed1ab_0
@@ -221,11 +221,11 @@ dependencies:
   - requests=2.32.3=pyhd8ed1ab_0
   - rfc3339-validator=0.1.4=pyhd8ed1ab_0
   - rfc3986-validator=0.1.1=pyh9f0ad1d_0
-  - rpds-py=0.19.0=py310h42e942d_0
+  - rpds-py=0.19.1=py310h42e942d_0
   - scikit-learn=1.4.2=py310h981052a_1
   - scipy=1.14.0=py310h93e2701_1
   - send2trash=1.8.3=pyh0d859eb_0
-  - setuptools=70.2.0=pyhd8ed1ab_0
+  - setuptools=71.0.4=pyhd8ed1ab_0
   - six=1.16.0=pyh6c4a22f_0
   - sniffio=1.3.1=pyhd8ed1ab_0
   - snowballstemmer=2.2.0=pyhd8ed1ab_0
@@ -241,17 +241,17 @@ dependencies:
   - sphinx-multitoc-numbering=0.1.3=pyhd8ed1ab_0
   - sphinx-thebe=0.2.1=pyhd8ed1ab_0
   - sphinx-togglebutton=0.3.2=pyhd8ed1ab_0
-  - sphinxcontrib-applehelp=1.0.8=pyhd8ed1ab_0
+  - sphinxcontrib-applehelp=2.0.0=pyhd8ed1ab_0
   - sphinxcontrib-bibtex=2.5.0=pyhd8ed1ab_0
-  - sphinxcontrib-devhelp=1.0.6=pyhd8ed1ab_0
-  - sphinxcontrib-htmlhelp=2.0.5=pyhd8ed1ab_0
+  - sphinxcontrib-devhelp=2.0.0=pyhd8ed1ab_0
+  - sphinxcontrib-htmlhelp=2.1.0=pyhd8ed1ab_0
   - sphinxcontrib-jsmath=1.0.1=pyhd8ed1ab_0
-  - sphinxcontrib-qthelp=1.0.7=pyhd8ed1ab_0
+  - sphinxcontrib-qthelp=2.0.0=pyhd8ed1ab_0
   - sphinxcontrib-serializinghtml=1.1.10=pyhd8ed1ab_0
   - sqlalchemy=2.0.31=py310hc51659f_0
   - stack_data=0.6.2=pyhd8ed1ab_0
   - tabulate=0.9.0=pyhd8ed1ab_1
-  - tbb=2021.12.0=h434a139_2
+  - tbb=2021.12.0=h434a139_3
   - tblib=3.0.0=pyhd8ed1ab_0
   - terminado=0.18.1=pyh0d859eb_0
   - threadpoolctl=3.5.0=pyhc1e730c_0
@@ -278,7 +278,7 @@ dependencies:
   - webencodings=0.5.1=pyhd8ed1ab_2
   - websocket-client=1.8.0=pyhd8ed1ab_0
   - wheel=0.43.0=pyhd8ed1ab_1
-  - widgetsnbextension=3.6.7=pyhd8ed1ab_0
+  - widgetsnbextension=3.6.8=pyhd8ed1ab_0
   - xorg-libxau=1.0.11=hd590300_0
   - xorg-libxdmcp=1.1.3=h7f98852_0
   - xz=5.2.6=h166bdaf_0
@@ -287,17 +287,17 @@ dependencies:
   - zeromq=4.3.5=h75354e8_4
   - zict=3.0.0=pyhd8ed1ab_0
   - zipp=3.19.2=pyhd8ed1ab_0
-  - zstandard=0.22.0=py310hab88d88_1
+  - zstandard=0.23.0=py310h64cae3c_0
   - zstd=1.5.6=ha6fb4c9_0
   - pip:
       - empymod === 2.3.1
-      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils@6dd821c01243dc4d52df5e62817c5d6f94c57916
-      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@21ce81d279c206ce0a279377168ce50e0a35d3d2
+      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils@b0e207359035ddee868c2b334fabffe5c09063ed
+      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@b5064fb631056dcaa57e379719e923fcd1195f6b
       - llvmlite === 0.43.0
       - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg@b643f1cb9a9fee76b5e4bd7ed4f1b7a65d1646ec
       - numba === 0.60.0
-      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app@f9d919b21d384b454082e4eb8bde8f67d5242e01
-      - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps@13c05a3d90fcf2bc37f4d752affbda277c61b8b0
+      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app@7248a2568f3a3fd9b69b14da0b7257c7eeec2ac8
+      - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps@1bf3fdeee1ad44d0fd38c97e99081a3541f8bcac
       - scooby === 0.10.0
 
 variables:
