--- a/environments/py-3.10-win-64.conda.lock.yml
+++ b/environments/py-3.10-win-64.conda.lock.yml
@@ -10,7 +10,7 @@ dependencies:
   - brotli=1.1.0=hcfcfb64_1
   - brotli-bin=1.1.0=hcfcfb64_1
   - brotli-python=1.1.0=py310h00ffb61_1
-  - bzip2=1.0.8=hcfcfb64_5
+  - bzip2=1.0.8=h2466b09_7
   - ca-certificates=2024.7.4=h56e8100_0
   - cached-property=1.5.2=hd8ed1ab_1
   - cached_property=1.5.2=pyha770c72_1
@@ -35,8 +35,8 @@ dependencies:
   - hdf5=1.14.3=nompi_h2b43c12_105
   - hpack=4.0.0=pyh9f0ad1d_0
   - hyperframe=6.0.1=pyhd8ed1ab_0
-  - importlib-metadata=8.0.0=pyha770c72_0
-  - importlib_metadata=8.0.0=hd8ed1ab_0
+  - importlib-metadata=8.2.0=pyha770c72_0
+  - importlib_metadata=8.2.0=hd8ed1ab_0
   - intel-openmp=2023.2.0=h57928b3_50497
   - jinja2=3.1.4=pyhd8ed1ab_0
   - joblib=1.4.2=pyhd8ed1ab_0
@@ -50,11 +50,11 @@ dependencies:
   - libbrotlidec=1.1.0=hcfcfb64_1
   - libbrotlienc=1.1.0=hcfcfb64_1
   - libcblas=3.9.0=20_win64_mkl
-  - libcurl=8.8.0=hd5e4a3a_1
+  - libcurl=8.9.1=h18fefc2_0
   - libdeflate=1.20=hcfcfb64_0
   - libdlf=0.2.0=pyhd8ed1ab_0
   - libffi=3.4.2=h8ffe710_5
-  - libhwloc=2.11.0=default_h8125262_1000
+  - libhwloc=2.11.1=default_h8125262_1000
   - libiconv=1.17=hcfcfb64_2
   - libjpeg-turbo=3.0.0=hcfcfb64_1
   - liblapack=3.9.0=20_win64_mkl
@@ -64,7 +64,7 @@ dependencies:
   - libtiff=4.6.0=hddb2be6_3
   - libwebp-base=1.4.0=hcfcfb64_0
   - libxcb=1.16=hcd874cb_0
-  - libxml2=2.12.7=h0f24e4e_2
+  - libxml2=2.12.7=h0f24e4e_4
   - libzlib=1.3.1=h2466b09_1
   - locket=1.0.0=pyhd8ed1ab_0
   - m2w64-gcc-libgfortran=5.3.0=6
@@ -81,12 +81,12 @@ dependencies:
   - numcodecs=0.12.1=py310h9e98ed7_1
   - numpy=1.26.4=py310hf667824_0
   - openjpeg=2.5.2=h3d672ee_0
-  - openssl=3.3.1=h2466b09_1
+  - openssl=3.3.1=h2466b09_2
   - packaging=24.1=pyhd8ed1ab_0
   - pandas=2.2.2=py310hb4db72f_1
   - partd=1.4.2=pyhd8ed1ab_0
   - pillow=10.3.0=py310h3e38d90_1
-  - pip=24.0=pyhd8ed1ab_0
+  - pip=24.2=pyhd8ed1ab_0
   - psutil=6.0.0=py310ha8f682b_0
   - pthread-stubs=0.4=hcd874cb_1001
   - pthreads-win32=2.9.1=hfa6e2cd_3
@@ -106,10 +106,10 @@ dependencies:
   - pyyaml=6.0.1=py310h8d17308_1
   - scikit-learn=1.4.2=py310hf2a6c47_1
   - scipy=1.14.0=py310h46043a1_1
-  - setuptools=70.2.0=pyhd8ed1ab_0
+  - setuptools=71.0.4=pyhd8ed1ab_0
   - six=1.16.0=pyh6c4a22f_0
   - sortedcontainers=2.4.0=pyhd8ed1ab_0
-  - tbb=2021.12.0=hc790b64_2
+  - tbb=2021.12.0=hc790b64_3
   - tblib=3.0.0=pyhd8ed1ab_0
   - threadpoolctl=3.5.0=pyhc1e730c_0
   - tk=8.6.13=h5226925_1
@@ -134,17 +134,17 @@ dependencies:
   - zarr=2.14.2=pyhd8ed1ab_0
   - zict=3.0.0=pyhd8ed1ab_0
   - zipp=3.19.2=pyhd8ed1ab_0
-  - zstandard=0.22.0=py310he5e10e1_1
+  - zstandard=0.23.0=py310he5e10e1_0
   - zstd=1.5.6=h0ea2cb4_0
   - pip:
       - empymod === 2.3.1
-      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils@6dd821c01243dc4d52df5e62817c5d6f94c57916
-      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@21ce81d279c206ce0a279377168ce50e0a35d3d2
+      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils@b0e207359035ddee868c2b334fabffe5c09063ed
+      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@b5064fb631056dcaa57e379719e923fcd1195f6b
       - llvmlite === 0.43.0
       - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg@b643f1cb9a9fee76b5e4bd7ed4f1b7a65d1646ec
       - numba === 0.60.0
-      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app@f9d919b21d384b454082e4eb8bde8f67d5242e01
-      - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps@13c05a3d90fcf2bc37f4d752affbda277c61b8b0
+      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app@7248a2568f3a3fd9b69b14da0b7257c7eeec2ac8
+      - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps@1bf3fdeee1ad44d0fd38c97e99081a3541f8bcac
       - scooby === 0.10.0
 
 variables:
