--- a/environments/py-3.10-linux-64-dev.conda.lock.yml
+++ b/environments/py-3.10-linux-64-dev.conda.lock.yml
@@ -4,7 +4,6 @@
 
 channels:
   - conda-forge
-  - nodefaults
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=2_kmp_llvm
@@ -19,7 +18,7 @@ dependencies:
   - astroid=3.2.4=py310hff52083_0
   - asttokens=2.4.1=pyhd8ed1ab_0
   - async-lru=2.0.4=pyhd8ed1ab_0
-  - attrs=23.2.0=pyh71513ae_0
+  - attrs=24.2.0=pyh71513ae_0
   - babel=2.14.0=pyhd8ed1ab_0
   - beautifulsoup4=4.12.3=pyha770c72_0
   - bleach=6.1.0=pyhd8ed1ab_0
@@ -32,19 +31,19 @@ dependencies:
   - cached-property=1.5.2=hd8ed1ab_1
   - cached_property=1.5.2=pyha770c72_1
   - certifi=2024.7.4=pyhd8ed1ab_0
-  - cffi=1.16.0=py310h2fee648_0
+  - cffi=1.17.0=py310h2fdcea3_0
   - charset-normalizer=3.3.2=pyhd8ed1ab_0
   - click=8.1.7=unix_pyh707e725_0
   - cloudpickle=3.0.0=pyhd8ed1ab_0
   - colorama=0.4.6=pyhd8ed1ab_0
   - comm=0.2.2=pyhd8ed1ab_0
   - contourpy=1.2.1=py310hd41b1e2_0
-  - coverage=7.6.0=py310h5b4e0ec_0
+  - coverage=7.6.1=py310h5b4e0ec_0
   - cycler=0.12.1=pyhd8ed1ab_0
   - cytoolz=0.12.3=py310h2372a71_0
   - dask-core=2024.6.2=pyhd8ed1ab_0
   - dataclasses=0.8=pyhc8e2a94_3
-  - debugpy=1.8.3=py310hea249c9_0
+  - debugpy=1.8.5=py310hea249c9_0
   - decorator=5.1.1=pyhd8ed1ab_0
   - defusedxml=0.7.1=pyhd8ed1ab_0
   - dill=0.3.8=pyhd8ed1ab_0
@@ -117,7 +116,7 @@ dependencies:
   - libbrotlienc=1.1.0=hd590300_1
   - libcblas=3.9.0=20_linux64_mkl
   - libcurl=8.9.1=hdb1bdb2_0
-  - libdeflate=1.20=hd590300_0
+  - libdeflate=1.21=h4bc722e_0
   - libdlf=0.2.0=pyhd8ed1ab_0
   - libedit=3.1.20191231=he28a2e2_2
   - libev=4.33=hd590300_2
@@ -136,7 +135,7 @@ dependencies:
   - libsqlite=3.46.0=hde9e2c9_0
   - libssh2=1.11.0=h0841786_0
   - libstdcxx-ng=14.1.0=hc0a3c3a_0
-  - libtiff=4.6.0=h1dd3fc0_3
+  - libtiff=4.6.0=h46a8edc_4
   - libuuid=2.38.1=h0b41bf4_0
   - libwebp-base=1.4.0=hd590300_0
   - libxcb=1.16=hd590300_0
@@ -214,15 +213,15 @@ dependencies:
   - python-tzdata=2023.4=pyhd8ed1ab_0
   - python_abi=3.10=4_cp310
   - pytz=2024.1=pyhd8ed1ab_0
-  - pyyaml=6.0.1=py310h2372a71_1
-  - pyzmq=26.0.3=py310h6883aea_0
+  - pyyaml=6.0.2=py310h5b4e0ec_0
+  - pyzmq=26.1.0=py310h7d2b5bf_0
   - readline=8.2=h8228510_1
   - readthedocs-sphinx-ext=2.2.5=pyhd8ed1ab_0
   - referencing=0.35.1=pyhd8ed1ab_0
   - requests=2.32.3=pyhd8ed1ab_0
   - rfc3339-validator=0.1.4=pyhd8ed1ab_0
   - rfc3986-validator=0.1.1=pyh9f0ad1d_0
-  - rpds-py=0.19.1=py310h42e942d_0
+  - rpds-py=0.20.0=py310h42e942d_0
   - scikit-learn=1.4.2=py310h981052a_1
   - scipy=1.14.0=py310h93e2701_1
   - send2trash=1.8.3=pyh0d859eb_0
@@ -249,7 +248,7 @@ dependencies:
   - sphinxcontrib-jsmath=1.0.1=pyhd8ed1ab_0
   - sphinxcontrib-qthelp=2.0.0=pyhd8ed1ab_0
   - sphinxcontrib-serializinghtml=1.1.10=pyhd8ed1ab_0
-  - sqlalchemy=2.0.31=py310hc51659f_0
+  - sqlalchemy=2.0.32=py310h5b4e0ec_0
   - stack_data=0.6.2=pyhd8ed1ab_0
   - tabulate=0.9.0=pyhd8ed1ab_1
   - tbb=2021.12.0=h434a139_3
@@ -263,7 +262,7 @@ dependencies:
   - tomlkit=0.13.0=pyha770c72_0
   - toolz=0.12.1=pyhd8ed1ab_0
   - tornado=6.4.1=py310hc51659f_0
-  - tqdm=4.66.4=pyhd8ed1ab_0
+  - tqdm=4.66.5=pyhd8ed1ab_0
   - traitlets=5.14.3=pyhd8ed1ab_0
   - types-python-dateutil=2.9.0.20240316=pyhd8ed1ab_0
   - typing-extensions=4.12.2=hd8ed1ab_0
@@ -278,7 +277,7 @@ dependencies:
   - webcolors=24.6.0=pyhd8ed1ab_0
   - webencodings=0.5.1=pyhd8ed1ab_2
   - websocket-client=1.8.0=pyhd8ed1ab_0
-  - wheel=0.43.0=pyhd8ed1ab_1
+  - wheel=0.44.0=pyhd8ed1ab_0
   - widgetsnbextension=3.6.8=pyhd8ed1ab_0
   - xorg-libxau=1.0.11=hd590300_0
   - xorg-libxdmcp=1.1.3=h7f98852_0
