--- a/environments/py-3.10-win-64-dev.conda.lock.yml
+++ b/environments/py-3.10-win-64-dev.conda.lock.yml
@@ -4,7 +4,6 @@
 
 channels:
   - conda-forge
-  - nodefaults
 dependencies:
   - accessible-pygments=0.0.5=pyhd8ed1ab_0
   - alabaster=0.7.16=pyhd8ed1ab_0
@@ -17,7 +16,7 @@ dependencies:
   - astroid=3.2.4=py310h5588dad_0
   - asttokens=2.4.1=pyhd8ed1ab_0
   - async-lru=2.0.4=pyhd8ed1ab_0
-  - attrs=23.2.0=pyh71513ae_0
+  - attrs=24.2.0=pyh71513ae_0
   - babel=2.14.0=pyhd8ed1ab_0
   - beautifulsoup4=4.12.3=pyha770c72_0
   - bleach=6.1.0=pyhd8ed1ab_0
@@ -29,19 +28,19 @@ dependencies:
   - cached-property=1.5.2=hd8ed1ab_1
   - cached_property=1.5.2=pyha770c72_1
   - certifi=2024.7.4=pyhd8ed1ab_0
-  - cffi=1.16.0=py310h8d17308_0
+  - cffi=1.17.0=py310ha8f682b_0
   - charset-normalizer=3.3.2=pyhd8ed1ab_0
   - click=8.1.7=win_pyh7428d3b_0
   - cloudpickle=3.0.0=pyhd8ed1ab_0
   - colorama=0.4.6=pyhd8ed1ab_0
   - comm=0.2.2=pyhd8ed1ab_0
   - contourpy=1.2.1=py310h232114e_0
-  - coverage=7.6.0=py310ha8f682b_0
+  - coverage=7.6.1=py310ha8f682b_0
   - cycler=0.12.1=pyhd8ed1ab_0
   - cytoolz=0.12.3=py310h8d17308_0
   - dask-core=2024.6.2=pyhd8ed1ab_0
   - dataclasses=0.8=pyhc8e2a94_3
-  - debugpy=1.8.3=py310h9e98ed7_0
+  - debugpy=1.8.5=py310h9e98ed7_0
   - decorator=5.1.1=pyhd8ed1ab_0
   - defusedxml=0.7.1=pyhd8ed1ab_0
   - dill=0.3.8=pyhd8ed1ab_0
@@ -112,7 +111,7 @@ dependencies:
   - libbrotlienc=1.1.0=hcfcfb64_1
   - libcblas=3.9.0=20_win64_mkl
   - libcurl=8.9.1=h18fefc2_0
-  - libdeflate=1.20=hcfcfb64_0
+  - libdeflate=1.21=h2466b09_0
   - libdlf=0.2.0=pyhd8ed1ab_0
   - libffi=3.4.2=h8ffe710_5
   - libhwloc=2.11.1=default_h8125262_1000
@@ -123,7 +122,7 @@ dependencies:
   - libsodium=1.0.18=h8d14728_1
   - libsqlite=3.46.0=h2466b09_0
   - libssh2=1.11.0=h7dfc565_0
-  - libtiff=4.6.0=hddb2be6_3
+  - libtiff=4.6.0=hb151862_4
   - libwebp-base=1.4.0=hcfcfb64_0
   - libxcb=1.16=hcd874cb_0
   - libxml2=2.12.7=h0f24e4e_4
@@ -204,14 +203,14 @@ dependencies:
   - pytz=2024.1=pyhd8ed1ab_0
   - pywin32=306=py310h00ffb61_2
   - pywinpty=2.0.13=py310h00ffb61_0
-  - pyyaml=6.0.1=py310h8d17308_1
-  - pyzmq=26.0.3=py310h656833d_0
+  - pyyaml=6.0.2=py310ha8f682b_0
+  - pyzmq=26.1.0=py310h656833d_0
   - readthedocs-sphinx-ext=2.2.5=pyhd8ed1ab_0
   - referencing=0.35.1=pyhd8ed1ab_0
   - requests=2.32.3=pyhd8ed1ab_0
   - rfc3339-validator=0.1.4=pyhd8ed1ab_0
   - rfc3986-validator=0.1.1=pyh9f0ad1d_0
-  - rpds-py=0.19.1=py310hc226416_0
+  - rpds-py=0.20.0=py310hc226416_0
   - scikit-learn=1.4.2=py310hf2a6c47_1
   - scipy=1.14.0=py310h46043a1_1
   - send2trash=1.8.3=pyh5737063_0
@@ -238,7 +237,7 @@ dependencies:
   - sphinxcontrib-jsmath=1.0.1=pyhd8ed1ab_0
   - sphinxcontrib-qthelp=2.0.0=pyhd8ed1ab_0
   - sphinxcontrib-serializinghtml=1.1.10=pyhd8ed1ab_0
-  - sqlalchemy=2.0.31=py310ha8f682b_0
+  - sqlalchemy=2.0.32=py310ha8f682b_0
   - stack_data=0.6.2=pyhd8ed1ab_0
   - tabulate=0.9.0=pyhd8ed1ab_1
   - tbb=2021.12.0=hc790b64_3
@@ -252,7 +251,7 @@ dependencies:
   - tomlkit=0.13.0=pyha770c72_0
   - toolz=0.12.1=pyhd8ed1ab_0
   - tornado=6.4.1=py310ha8f682b_0
-  - tqdm=4.66.4=pyhd8ed1ab_0
+  - tqdm=4.66.5=pyhd8ed1ab_0
   - traitlets=5.14.3=pyhd8ed1ab_0
   - types-python-dateutil=2.9.0.20240316=pyhd8ed1ab_0
   - typing-extensions=4.12.2=hd8ed1ab_0
@@ -271,7 +270,7 @@ dependencies:
   - webcolors=24.6.0=pyhd8ed1ab_0
   - webencodings=0.5.1=pyhd8ed1ab_2
   - websocket-client=1.8.0=pyhd8ed1ab_0
-  - wheel=0.43.0=pyhd8ed1ab_1
+  - wheel=0.44.0=pyhd8ed1ab_0
   - widgetsnbextension=3.6.8=pyhd8ed1ab_0
   - win_inet_pton=1.1.0=pyhd8ed1ab_6
   - winpty=0.4.3=4
