--- a/environments/py-3.10-win-64.conda.lock.yml
+++ b/environments/py-3.10-win-64.conda.lock.yml
@@ -4,7 +4,6 @@
 
 channels:
   - conda-forge
-  - nodefaults
 dependencies:
   - annotated-types=0.7.0=pyhd8ed1ab_0
   - asciitree=0.3.3=py_2
@@ -16,7 +15,7 @@ dependencies:
   - cached-property=1.5.2=hd8ed1ab_1
   - cached_property=1.5.2=pyha770c72_1
   - certifi=2024.7.4=pyhd8ed1ab_0
-  - cffi=1.16.0=py310h8d17308_0
+  - cffi=1.17.0=py310ha8f682b_0
   - click=8.1.7=win_pyh7428d3b_0
   - cloudpickle=3.0.0=pyhd8ed1ab_0
   - colorama=0.4.6=pyhd8ed1ab_0
@@ -52,7 +51,7 @@ dependencies:
   - libbrotlienc=1.1.0=hcfcfb64_1
   - libcblas=3.9.0=20_win64_mkl
   - libcurl=8.9.1=h18fefc2_0
-  - libdeflate=1.20=hcfcfb64_0
+  - libdeflate=1.21=h2466b09_0
   - libdlf=0.2.0=pyhd8ed1ab_0
   - libffi=3.4.2=h8ffe710_5
   - libhwloc=2.11.1=default_h8125262_1000
@@ -62,7 +61,7 @@ dependencies:
   - libpng=1.6.43=h19919ed_0
   - libsqlite=3.46.0=h2466b09_0
   - libssh2=1.11.0=h7dfc565_0
-  - libtiff=4.6.0=hddb2be6_3
+  - libtiff=4.6.0=hb151862_4
   - libwebp-base=1.4.0=hcfcfb64_0
   - libxcb=1.16=hcd874cb_0
   - libxml2=2.12.7=h0f24e4e_4
@@ -104,7 +103,7 @@ dependencies:
   - python-tzdata=2023.4=pyhd8ed1ab_0
   - python_abi=3.10=4_cp310
   - pytz=2024.1=pyhd8ed1ab_0
-  - pyyaml=6.0.1=py310h8d17308_1
+  - pyyaml=6.0.2=py310ha8f682b_0
   - scikit-learn=1.4.2=py310hf2a6c47_1
   - scipy=1.14.0=py310h46043a1_1
   - setuptools=72.1.0=pyhd8ed1ab_0
@@ -116,7 +115,7 @@ dependencies:
   - tk=8.6.13=h5226925_1
   - toolz=0.12.1=pyhd8ed1ab_0
   - tornado=6.4.1=py310ha8f682b_0
-  - tqdm=4.66.4=pyhd8ed1ab_0
+  - tqdm=4.66.5=pyhd8ed1ab_0
   - typing-extensions=4.12.2=hd8ed1ab_0
   - typing_extensions=4.12.2=pyha770c72_0
   - tzdata=2024a=h0c530f3_0
@@ -126,7 +125,7 @@ dependencies:
   - vc=14.3=h8a93ad2_20
   - vc14_runtime=14.40.33810=ha82c5b3_20
   - vs2015_runtime=14.40.33810=h3bf8584_20
-  - wheel=0.43.0=pyhd8ed1ab_1
+  - wheel=0.44.0=pyhd8ed1ab_0
   - win_inet_pton=1.1.0=pyhd8ed1ab_6
   - xorg-libxau=1.0.11=hcd874cb_0
   - xorg-libxdmcp=1.1.3=hcd874cb_0
