--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,6 @@ discretize = "~0.10.0"  # also in simpeg, octree-creation-app
 distributed = "2024.6.*"  # because conda-lock doesn't take dask extras into account
 numpy = "~1.26.0" # also in geoh5py, simpeg
 scipy = "~1.14.0"
-zarr = "~2.14.2"  # also in simpeg[dask]
 
 ## Pip dependencies from Git repositories
 #----------------------------------------
@@ -97,6 +96,7 @@ pydiso = ">=0.0.5, <0.1.0"  # from simpeg
 pymatsolver = ">=0.2.0, <0.3.0"  # from simpeg
 scikit-learn = ">=1.4.0, <1.5.0"  # from SimPEG, also used by geo-unsup-mapper, petro-lingo
 tqdm = ">=4.66.1, <5.0.0"  # from simpeg
+zarr = ">=2.14.2, <2.15.0"  # from simpeg[dask]
 
 # force some versions to resolve incompatible resolution between PyPI and Conda
 #------------------------------------------------------------------------------
